Fixed image layer bug on mobile.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,7 +22,18 @@ body {
 html,#billboard,#img-container {
 	min-height: 100%;
 	height: 100%;
+
 }
+
+	#img-container {
+position: absolute;
+opacity: 0.8;
+position: fixed;
+overflow: hidden;
+/* overflow: hidden; */
+/* border: 1px solid red; */
+}
+
 #wrap {
 	position: absolute;
 	top: 0;
@@ -412,13 +423,6 @@ padding: 0;}
 	}
 	#parallax-wrap {
 		position: relative;
-	}
-	#img-container {
-		position: absolute;
-		position: fixed;
-		overflow: hidden;
-		/* overflow: hidden; */
-		/* border: 1px solid red; */
 	}
 	.image-layer {
 		position: absolute;
